syntax = "proto3";

package auth;

option go_package = "api/proto;authpb";


import "google/api/annotations.proto";


message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string token = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}


service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/v1/auth/register"
            body: "*"
        };
    }
    rpc Login(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/auth/login"
            body: "*"
        };
    }
}










